2004-02-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdlib/malloc.c: Fix bug #2143 (malloc wrap around top of RAM)

2004-02-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/interrupt.h: make timer_enable_int() static inline;
	fixes bug #5454.

2004-02-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/crc16.h: use __inline__ instead of inline.
	* include/avr/delay.h: Ditto.
	* include/avr/interrupt.h: Ditto:
	* include/avr/timer.h: Ditto.
	
2004-02-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdio/vfscanf.c: Apply patch #2554: fix %ul format.

2004-02-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdio/vfprintf.c: Fix bug #7556 (%s format with precision issue)

2003-11-18  Theodore A. Roth  <troth@openavr.org>

	* NEWS: Add note about new crc update functions.

2003-11-18  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/crc16.h (_crc16_update): Add line break to dox.
	(_crc_xmodem_update): Ditto.
	(_crc_ccitt_update): New function.
	[Submitted by Tomas Vanek <vanekt@fbl.cz>]

2003-11-12 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdio.h: Implement missing stdio members: vsprintf(),
		vsprintf_P(), vsnprintf(), vsnprintf_P()
	* libc/stdio/Makefile.am: ditto.
	* libc/stdio/vsprintf.c: New file.
	* libc/stdio/vsprintf_p.c: New file.
	* libc/stdio/vsnprintf.c: New file.
	* libc/stdio/vsnprintf_p.c: New file.

2003-11-11  Theodore A. Roth  <troth@openavr.org>

	* avr-libc.spec.in (BuildRequires): Don't require doxygen or tetex if
	"--without docs" was given.

2003-11-11  Theodore A. Roth  <troth@openavr.org>

	* avr-libc.spec.in: Allow disabling build of docs sub-package with 
	"--without docs".

2003-11-11  Theodore A. Roth  <troth@openavr.org>

	* include/avr/crc16.h: Use inttypes.h defined types to allow use
	with -mint8.
	* include/avr/delay.h: Ditto.
	[Submitted by Tomas Vanek <vanekt@fbl.cz>]

2003-11-11  Theodore A. Roth  <troth@openavr.org>
