@@ -1,5 +1,0 @@
-/* $Id$ */
-
-#warning "<timer.h> is deprecated, use <avr/timer.h> instead"
-
-#include <avr/timer.h>
